--- a/manifest.yml
+++ b/manifest.yml
@@ -5,4 +5,4 @@ applications:
   memory: 512M
   buildpack: https://github.com/cloudfoundry/java-buildpack
   instances: 1
-  path: target/demo-0.0.1-SNAPSHOT.jar
+  path: target/boot-exercise-2-0.0.1-SNAPSHOT.war
